tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__AdvStockingBus-qvZq59qRQ2C5Uzm7J7B4UA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 15749443452153133136,
  "prerequisites": [
    1493,
    2877
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Stocking bus but better!\n\nThis one can pull first 16 types of items automatically from ME network, which can be useful for some automations. Minimum stack size and refresh time can be configured in the GUI.\n\n[note]Using this on your main network is probably not a very good idea.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Adv. Stocking Bus",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493,
    2877
  ],
  "rewards": [],
  "tasks": []
}
