tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__AdvancedNeutroni-LsZndSrhSAGSi60QlbnDtg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3089829990997017526,
  "prerequisites": [
    2528
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you've unlocked the neutronium energy cell, you can combine it with other objects to make powerful upgrades to your AE capabilities.\n\nCombining with an ME controller gives you a controller with infinite energy.\n\nCombining with a cable anchor & quartz fiber gives you a replacement for the quartz fiber cable that has infinite energy.\n\nCombining with an advanced card will give you an energy card that will allow you to upgrade your wireless terminal to have infinite energy, wherever you go.\n\n[note]It is HIGHLY recommended you use these tools wherever possible on main-nets and sub-nets as they are huge TPS savers[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Advanced Neutronium Tech",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2528
  ],
  "rewards": [],
  "tasks": []
}
