tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__AutomatingCrafti-AAAAAAAAAAAAAAAAAAAFIA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1312,
  "prerequisites": [
    1311
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Is a component of the crafting CPU multiblock. This particular block provides the CPU with no additional features, but can be used as a \"filler\" block and as a crafting ingredient for the crafting storage, monitor and co-processing units.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Automating Crafting",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1311
  ],
  "rewards": [],
  "tasks": []
}
